# alipay-api-buy-rust

./: .gitignore  Cargo.toml  Dockerfile.build  README.md  build-image  deploy  s.yml
crates/alipay_sdk_rust/src/: pay.rs  request.rs  response.rs  util.rs
crates/alipay_sdk_rust/src/biz/: biz_content.rs  mod.rs  system_oauth_token.rs
crates/alipay_sdk_rust/src/param/: biz_content.rs  mod.rs
crates/jdm/: Cargo.toml
crates/jdm/src/: common.rs  config.rs  main.rs
crates/jdm/src/controller/: mod.rs  order.rs  user.rs
crates/jdm/src/lib/: mod.rs  util.rs
crates/jdm/src/lib/alipay/: mod.rs
crates/jdm/src/lib/alipay/rsa/: alipayCertPublicKey_RSA2.crt  alipayRootCert.crt  appCertPublicKey.crt
crates/jdm/src/middleware/: auth.rs  mod.rs
crates/jdm/src/model/: mod.rs  order.rs  page.rs  product.rs  ret.rs  user.rs
crates/jdm/src/rest/: order.rs  user.rs
crates/jdm/src/service/: mod.rs  order.rs  product.rs  user.rs
