[workspace]
resolver = "2"
members = [
    "crates/jdm",
    "crates/alipay_sdk_rust"
]

[workspace.package]
version = "0.1.0"

[profile.release]
# The following two lines add minimal symbol information, which helps certain profilers like Bytehound
# without significantly increasing binary size
debug = true
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

[profile.bench]
# Do not strip any debug info.  This helps the widest set of profiling tools
debug = true
strip = 'none'

[profile.simulator]
inherits = "test"
debug = true
debug-assertions = true
overflow-checks = true
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1

[workspace.dependencies]