[package]
name = "jdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-http = "3.2.2"

futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_with = "1.14.0"
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2.3.0", features = ["chrono-0_4"] }
once_cell = "1.13.1"
mongodb = "2.3.0"
tokio = { version = "1.21.2", features = ["full"] }
alipay_sdk_rust = {path="../alipay_sdk_rust"}

rust-crypto = "0.2"
rand = "0.8.5"
base64 = "0.13.1"

env_logger = "0.9"
log = "0.4"
unescape = "0.1.0"
num_enum = "0.5.1"
# [dependencies.mongodb]
# version = "2.3.0"
# features = ["tokio-sync"]